codex-rs/tui/src/config_panel/snapshots/codex_tui__config_panel__tests__config_copy_on_select_choice.snap
---
source: tui/src/config_panel/config_panel_tests.rs
expression: "render(&picker, 100)"
---
  Copy on select
  Copy transcript selections on release. Auto uses terminal defaults.


› 1. Auto (default) (current)
  2. On
  3. Off

  enter select · esc back
