codex-rs/tui/src/config_panel/snapshots/codex_tui__config_panel__tests__config_resume_directory_remote.snap
---
source: tui/src/config_panel/config_panel_tests.rs
expression: "render(&picker, 100)"
---

  Resume directory
  Choose which working directory to use when the current directory and saved session differ. A
  directory passed with --cd takes precedence for that Codex session.


› 1. Ask (current)
     Current directory (disabled)  Requires --cd for remote sessions.
  2. Session directory

  enter select · esc back
