codex-rs/tui/src/config_panel/snapshots/codex_tui__config_panel__tests__config_right_click_paste_choice.snap
---
source: tui/src/config_panel/config_panel_tests.rs
expression: "render(&picker, 100)"
---
  Right-click paste
  Paste when nothing is selected. Auto follows the platform default; On also enables macOS.


› 1. Auto (default) (current)
  2. On
  3. Off

  enter select · esc back
